ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingressakila
  namespace: akila1456678
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
   - http:
      paths:
      - path: /akila/sonar
        backend:
          serviceName: sonarsvc
          servicePort: 9000
